crates/rsciter_macro/tests/compile_fail/not_a_mod_test.rs
#[rsciter_macro::xmod]
struct S;

fn main() {}
