crates/rsciter_macro/tests/compile_fail/not_a_mod_test.stderr
error: the #[rsciter::xmod] attribute can only be applied to an inline module or impl block!
 --> tests/compile_fail/not_a_mod_test.rs:2:1
  |
2 | struct S;
  | ^^^^^^
